# airesponder

./: .env  Dockerfile  MLOPSCA2.doc  README.md  bug_reports.csv  codeDoctor.py  devOps.py  docker-compose.yml  entry.py  main.py  my_file.txt  newBug.py  pyproject.toml  requirements.txt  test.py  train.py
.github/workflows/: ci-cd.yml  ci.yaml  deploy.yml
bugKB/chromadb/: chroma.sqlite3
bugKB/chromadb/ab9c8c8a-b642-464e-9be0-48e833f5b869/: index_metadata.pickle
codebase/chromadb/: chroma.sqlite3
dags/: bug_retrain_dag.py
reports/: collect.txt
